Fixed some more alignment bugs

--- a/src/client/components/Comments/Comment.less
+++ b/src/client/components/Comments/Comment.less
@@ -128,5 +128,17 @@ div[data-dir='rtl'] .Comment {
   &__text {
     margin-left: 0px;
     margin-right: 12px;
+
+    & > a > .ant-tag {
+      &:first-of-type {
+        margin-left: 0px;
+        margin-right: 4px;
+      }
+    }
+  }
+
+  &__date {
+    margin-left: 0;
+    margin-right: 8px;
   }
 }
