--- a/src/client/components/Navigation/Topnav.less
+++ b/src/client/components/Navigation/Topnav.less
@@ -160,7 +160,6 @@
 
 div[data-dir='rtl'] .Topnav {
   &__menu-container {
-    display: flex;
     justify-content: flex-end;
   }
 
