--- a/src/client/styles/modules/topnav-layout.less
+++ b/src/client/styles/modules/topnav-layout.less
@@ -80,11 +80,8 @@ div[data-dir='rtl'] .topnav-layout {
 
   .center {
     @media @small {
-      width: calc(100% ~'-' (@left-width + @right-width + 2 * @margin));
-      position: static;
       margin-left: @right-width;
       margin-right: @left-width + @margin;
-      display: block;
     }
 
     @media @medium {
